Esercizio completato. (Aggiunta della cronologia utente al formCalcolatrice e della memorizzazione del nome utente nei 2 form).

--- a/src/calcolatrice/formCalcolatrice.form
+++ b/src/calcolatrice/formCalcolatrice.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="calcolatrice.formCalcolatrice">
-  <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="638"/>
@@ -223,6 +223,25 @@
           <editable value="true"/>
           <font name="Comic Sans MS" size="36" style="1"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="8b07f" class="javax.swing.JTextArea" binding="txtCronologia">
+        <constraints>
+          <grid row="9" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="150"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Comic Sans MS" size="16"/>
+        </properties>
+      </component>
+      <component id="34555" class="javax.swing.JButton" binding="btnCronologia">
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Comic Sans MS" size="36"/>
+          <text value="CRONOLOGIA"/>
         </properties>
       </component>
     </children>
